--- a/content/themes/ts/stylesheets/less/style.less
+++ b/content/themes/ts/stylesheets/less/style.less
@@ -277,6 +277,10 @@ article{
 	.border-radius(3px);
 	.transition(all 0.15s ease);
 
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+
 	&:hover,
 	&:focus{
 		border-color: fadeout(@red_active, 20%);
@@ -579,7 +583,6 @@ body{
 	}
 
 	.bar{
-		position: fixed;
 		width: 100%;
 		z-index: 1000;
 
@@ -590,7 +593,6 @@ body{
 		background: transparent url(../../assets/plaid.jpg) repeat top left;
 		border-bottom: 1px solid @dgreen;
 		border-top: 1px solid lighten(@green, 30%);
-		padding-top: 32/@em;
 
 		.box-shadow(inset 0 -1px 0 rgba(255,255,255,0.5));
 	}
@@ -652,9 +654,6 @@ body{
 article{
 	margin-bottom: 32/@em;
 
-	header{
-		margin-bottom: 16/@em;
-	}
 	footer{
 		font-size: 13/@em;
 		line-height: 20/@em;
@@ -668,6 +667,20 @@ article{
 	.entry-content{
 		a{
 			border-bottom: 1px solid @red_active;
+		}
+	}
+}
+header{
+	margin-bottom: 16/@em;
+}
+section.collection{
+	&>header{
+		color: @lgray;
+		border-bottom: 1px solid lighten(@lgray, 25%);
+		padding-bottom: 8/@em;
+
+		h1{
+			font-weight: @thin;
 		}
 	}
 }
@@ -953,12 +966,10 @@ article{
 
 /* !Greeting ==== */
 .greeting{
-	padding: 40/@em 0;
-
-	h1{
-		font-size: 68/@em;
-		line-height: 16/@em;
+	header{
+		margin-bottom: 0;
 	}
+
 	h2{
 		color: lighten(@lgray, 20%);
 		font-weight: @thin;
@@ -1332,9 +1343,33 @@ article{
 	}
 }
 .project-nav-container{
+	background: #f6f6f6 url(../../assets/cork.jpg) repeat 0 0;
 	margin: 0;
-	padding: 16/@em 0;
+	padding: 0;
+	overflow: hidden;
 	position: relative;
+	z-index: 100;
+	
+	&:before{
+		background: transparent url(../../assets/project-nav-cork-gradient.png) repeat-x left bottom;
+		bottom: 0;
+		content: '';
+		display: block;
+		height: 20px;
+		left: 0;
+		position: absolute;
+		pointer-events: none;
+		width: 100%;
+		z-index: 10;
+	}
+	
+	&.sappy{
+		.box-shadow(0 5px 10px fadeout(@black, 60%));
+	}
+	
+	.container{
+		padding: 16/@em 0;
+	}
 }
 .project-nav{
 	li{
@@ -1413,19 +1448,6 @@ article{
 
 .playpen-container{
 	position: relative;
-
-	&:before{
-		background: transparent url(../../assets/project-nav-cork-gradient.png) repeat-x left bottom;
-		content: '';
-		display: block;
-		height: 20px;
-		left: 0;
-		position: absolute;
-		pointer-events: none;
-		top: -21px;
-		width: 100%;
-		z-index: 10;
-	}
 }
 
 .gform_wrapper{
@@ -1623,15 +1645,28 @@ article{
 			}
 		}
 	}
+	
+	.greeting{
+		padding: 16/@em 0;
 
-	.about{
-		header{
-			h1{
-				font-size: 31/@em;
-			}
-			h3{
-				font-size: 20/@em;
-			}
+		h1{
+			font-size: 40/@em;
+			line-height: 16/@em;
+		}
+		h2{
+			font-size: 25/@em;
+		}
+	}
+
+	header.headline{
+		h1{
+			font-size: 31/@em;
+		}
+		h2{
+			font-size: 25/@em;
+		}
+		h3{
+			font-size: 20/@em;
 		}
 	}
 
@@ -1697,14 +1732,18 @@ article{
 		}
 	}
 
-	.about{
-		header{
-			h1{
-				font-size: 37/@em;
-			}
-			h3{
-				font-size: 23/@em;
-			}
+	header.headline{
+		h1{
+			font-size: 37/@em;
+		}
+		h3{
+			font-size: 23/@em;
+		}
+	}
+
+	.greeting{
+		h1{
+			font-size: 50/@em;
 		}
 	}
 
@@ -1799,6 +1838,14 @@ article{
 			display: block;
 		}
 	}
+	
+	.greeting{
+		padding: 40/@em 0;
+	
+		h1{
+			font-size: 68/@em;
+		}
+	}
 
 	.highlight{
 
@@ -1868,6 +1915,15 @@ article{
 			width: 33.33333333%;
 		}
 	}
+	
+	#header{
+		.bar{
+			position: fixed;
+		}
+		.logo{
+			padding-top: 32/@em;
+		}
+	}
 
 	.about{
 		header{
@@ -1924,8 +1980,7 @@ article{
 	}
 
 	.project-nav-container{
-		height: 10px;
-		overflow: hidden;
+		height: 40/@em;
 
 		.project-nav{
 			position: relative;
@@ -1944,6 +1999,18 @@ article{
 			&:before{
 				left: auto;
 				right: -35px;
+			}
+		}
+	}
+	.touch{
+		.project-nav-container{
+			height: auto;
+			
+			.project-nav{
+				&:before,
+				&:after{
+					display: none;
+				}
 			}
 		}
 	}
