--- a/content/themes/ts/stylesheets/less/twipsy.less
+++ b/content/themes/ts/stylesheets/less/twipsy.less
@@ -49,8 +49,9 @@
 	position: absolute;
 	visibility: visible;
 	padding: 5px;
+	pointer-events: none;
 	font-size: 12/@em;
-	z-index: 1000;
+	z-index: 10000;
 	.opacity(80);
 
 	&.fade.in {
