--- a/content/themes/ts/stylesheets/css/style.css
+++ b/content/themes/ts/stylesheets/css/style.css
@@ -265,8 +265,9 @@ img::-moz-selection {
   position: absolute;
   visibility: visible;
   padding: 5px;
+  pointer-events: none;
   font-size: 0.75em;
-  z-index: 1000;
+  z-index: 10000;
   opacity: 0.8;
   filter: alpha(opacity=80);
 }
@@ -511,7 +512,8 @@ button,
 .comment-reply-link,
 input[type="submit"],
 .goals-table .legend,
-.circle .details {
+.circle .details,
+article ol li:before {
   font-family: depot-new-condensed-web-1, depot-new-condensed-web-2, futura-pt, Futura, Tahoma, Helvetica, sans-serif;
 }
 h1,
@@ -893,6 +895,7 @@ hr:after {
 }
 .social a:hover {
   background: none;
+  border: none;
 }
 .social a:hover span {
   background-position-y: -22px;
@@ -1046,11 +1049,36 @@ hr:after {
   position: absolute;
   width: 100%;
 }
+.wf-loading body {
+  background-image: url(../../assets/ajax-loader.gif);
+  background-position: center 200px;
+  background-repeat: no-repeat;
+}
+.wf-loading .content-wrapper {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+.wf-active .content-wrapper {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
 /* =========================================== */
 /* !Styles                                     */
 /* =========================================== */
 body {
   background: #f6f6f6 url(../../assets/cork.jpg) repeat 0 0;
+}
+.content-wrapper {
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
 }
 .standard-width,
 .container,
@@ -1116,7 +1144,7 @@ body {
   left: -0.5em;
   padding: 0.5em 0.5em 0 0.5em;
   position: absolute;
-  z-index: 10;
+  z-index: 1;
   top: 100%;
   width: 100%;
   -webkit-border-radius: 0 0 3px 3px;
@@ -1219,11 +1247,42 @@ article footer {
   margin-top: 0.5em;
   position: relative;
 }
+article li {
+  padding: 0.25em 0;
+}
 article .entry-meta {
   font-weight: 100;
 }
 article .entry-content a {
   border-bottom: 1px solid #ec4f24;
+}
+.generatedcontent article ol {
+  counter-reset: numbers 0;
+  padding-left: 3em;
+}
+.generatedcontent article ol li {
+  list-style: none;
+  position: relative;
+}
+.generatedcontent article ol li:before {
+  border: 1px dashed #999999;
+  content: counter(numbers);
+  counter-increment: numbers;
+  height: 1.5em;
+  left: -2.25em;
+  position: absolute;
+  text-align: center;
+  top: 0.25em;
+  width: 1.5em;
+  -webkit-border-radius: 0.75em;
+  -moz-border-radius: 0.75em;
+  border-radius: 0.75em;
+  -webkit-border-radius: 0.75em;
+  -moz-border-radius: 0.75em;
+  border-radius: 0.75em;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
 }
 header {
   margin-bottom: 1em;
@@ -1721,9 +1780,27 @@ section.collection > header h1 {
   margin-bottom: 0.375em;
   padding-bottom: 0.375em;
 }
+/* !Sharing ==== */
+.sharing {
+  margin: 1em 0;
+}
+.sharing a:hover {
+  background-color: none;
+  border: none;
+}
 /* !Comments ==== */
 #comments {
   margin: 2em 0;
+}
+#comments .social {
+  margin-right: 0.5em;
+}
+#comments .social a {
+  display: inline-block;
+  vertical-align: bottom;
+}
+#comments .social a span {
+  background-position-y: -22px;
 }
 .commentlist {
   list-style: none;
@@ -1857,6 +1934,16 @@ section.collection > header h1 {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
+  *zoom: 1;
+  zoom: 1;
+}
+#respond:before,
+#respond:after {
+  display: table;
+  content: "";
+}
+#respond:after {
+  clear: both;
 }
 #respond label {
   display: block;
@@ -1874,8 +1961,17 @@ section.collection > header h1 {
   margin: 0 0 1em;
 }
 #respond .form-submit {
-  margin: 1em 0 0;
+  margin: 0;
   text-align: right;
+}
+#respond .comment-form-comment {
+  margin-bottom: 1em;
+}
+#respond .comment-subscription-form {
+  margin: 0;
+}
+#respond .comment-subscription-form label {
+  display: inline;
 }
 #respond #comment {
   height: 10.5em;
@@ -2522,6 +2618,9 @@ section.collection > header h1 {
   }
   .circles .circle:nth-child(odd) {
     margin-left: 2.4em;
+  }
+  #respond .form-submit {
+    float: right;
   }
   #footer nav {
     float: right;
