Updated padding for two column comment box

--- a/content/themes/ts/stylesheets/less/style.less
+++ b/content/themes/ts/stylesheets/less/style.less
@@ -2002,6 +2002,9 @@ section.collection{
 		.form-submit{
 			float: right;
 		}
+		.comment-form-comment{
+			padding-left: 20/@em;
+		}
 	}
 
 	#footer{
